--- a/layout.liquid
+++ b/layout.liquid
@@ -207,6 +207,7 @@
     </script>
 
     </body>
+    {{website_data.ga_code}}
     <script type="text/javascript" async src="{{ '/js/template.js' | file_url: website_data.template }}"> </script>
   </head>
 </html>
