Change footer link

--- a/_footer.liquid
+++ b/_footer.liquid
@@ -24,7 +24,7 @@
                  All rights reserved.
                  <br />
                  Hotel Website Powered by
-                 <a href="http://thebookingfactory.com"> thebookingfactory.com </a>
+                 <a href="{{website_data.project_url}}">{{website_data.project_name}}</a>
               </div>
             </div>
           </div>
