--- a/layout.liquid
+++ b/layout.liquid
@@ -12,6 +12,7 @@
        : {{room.title}}
      {% endif %}
     </title>
+    <link rel="shortcut icon" href="{{ website_data.favicon | attachment_url: 'default' }}" type="image/x-icon"/>
 
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
