Bring back mobile menu

--- a/layout.liquid
+++ b/layout.liquid
@@ -130,6 +130,7 @@
 
       <div id="fixer"></div>
       <!-- Mobile navigation  -->
+     {%  include 'mobile_navigation' %}
 
       <main id="panel">
         {% if  website_data.mobile_menu_fixed == true %}
