--- a/_mobile_navigation.liquid
+++ b/_mobile_navigation.liquid
@@ -194,20 +194,20 @@
         </a>
       </li>
       {% if website_data.langs.size > 1 %}
-        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children languages">
-          <a href="#">
+        <li class="dropdown languages">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">
            <span class="flag-icon flag-icon-{{website_data.lang}}"></span>
              {{ website_data.lang | get_native_title }}
            <i class="fa fa-caret-right"></i>
          </a>
-         <ul class="sub-menu">
+         <ul class="dropdown-menu">
            {% for lang in website_data.langs %}
-             <li class="menu-item menu-item-type-post_type menu-item-object-page">
-               <a href="{{ '/' | append: lang | link_to_another_lang: website_data.link_object }}" title="Choose language">
-                 <span class="flag-icon flag-icon-{{lang}}"></span>
-                 {{ lang | get_native_title }}
-               </a>
-             </li>
+              <li>
+                <a href="{{ '/' | append: lang | link_to_another_lang: website_data.link_object }}">
+                  <span class="flag-icon flag-icon-{{lang}}"></span>
+                  {{ lang | get_native_title }}
+                </a>
+              </li>
            {% endfor %}
          </ul>
        </li>
