--- a/_mobile_navigation.liquid
+++ b/_mobile_navigation.liquid
@@ -86,7 +86,7 @@
             </li>
           {% else %}
             <li>
-              <a href="{{ link.value | link_to: website_data.link_object }}">{{link.value}}</a>
+              <a href="{{ link.value | link_to: website_data.link_object }}">{{link.title}}</a>
             </li>
           {% endif %}
         {% else %}
